# linux-init

./: .gitignore  CLAUDE.md  Cargo.toml  FEASIBILITY_REPORT.md  LICENSE  QWEN.md  README.md
.qwen/: settings.json  settings.json.orig
.qwen/skills/command-dependency-check/: SKILL.md
.qwen/skills/linux-multi-distro-support/: SKILL.md
.qwen/skills/rust-ratatui-tui-app/: SKILL.md
.qwen/skills/shell-alias-configuration/: SKILL.md
docs/superpowers/plans/: 2026-05-30-source-mirror-management.md
docs/superpowers/specs/: 2026-05-30-source-mirror-management-design.md
src/: app.rs  config.rs  i18n.rs  main.rs  utils.rs
src/distro/: apt.rs  detect.rs  mod.rs  pacman.rs
src/modules/: docker.rs  locale.rs  mod.rs  nvm.rs  shell.rs  sources.rs  ssh.rs  ssh_server.rs  tools.rs  vim.rs
src/ui/: mod.rs
